resolved one alignment issue in login page

--- a/src/pages/Login/index.css
+++ b/src/pages/Login/index.css
@@ -61,7 +61,7 @@
         height: 387px !important;
         top: -88px;
         right: -88px;
-        left: 56px;
+        left: 66px;
         border-radius: 249.94px;
         overflow: hidden;
         box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
